changed css to tackle flickering fixes #27

--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -3,22 +3,94 @@
   margin-bottom: 15px;
 }
 
-.xcarousel-caption{
+.x-carousel-caption{
   background: rgba(0, 0, 0, 0.4); /* Green background with 30% opacity */
-  width: 100%;
+/*  width: 100%;*/
   left: 0;
   right: 0;
 }
 .x-carousel {
   max-width: 832px;
-  max-height: 624px;
+  max-height: 652px;
 }
 
-.xjumbotron{
+.x-jumbotron{
   background-color: transparent;
 }
 
 .x-parts-list {
+  min-height: 624px;
+}
+
+.x-parts-list-part-carousel {
+  height: 200px;
+  margin: 5px;
+}
+
+.x-parts-list-part-caption {
   height: 200px;
   min-height: 200px;
+  margin: 5px;
+}
+
+
+/* Responsive: small devices , portrait tablets and up */
+@media screen and (max-width: 767px) {
+
+  /* Remove the padding we set earlier */
+  .header,
+  .marketing,
+  .footer {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  /* Space out the masthead */
+  .header {
+    margin-bottom: 20px;
+  }
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+
+  .container, .container-fluid {
+    max-width: 730px;
+  }
+
+  /* Remove the padding we set earlier */
+  .header,
+  .marketing,
+  .footer {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  /* Space out the masthead */
+  .header {
+    margin-bottom: 20px;
+  }
+
+}
+
+@media screen and (min-width: 1200px) {
+
+  .container, .container-fluid {
+    max-width: 80%;
+  }
+
+  /*Remove the padding we set earlier */
+  .header,
+  .marketing,
+  .footer {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .header {
+    margin-bottom: 30px;
+  }
+
+  .x-parts-list {
+    min-height: 848px;
+  }
+
 }
